--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "paparazzi"]
 	path = paparazzi
-	url = https://github.com/Alras16/Autonomous_Drones_and_Object_Recognition.git/paparazzi
+	url = https://github.com/Alras16/Autonomous_Drones_and_Object_Recognition/paparazzi.git
